# Edu-Algorithms

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  memcheck.sh
01_sort/: 01_insert.hpp  01_insert_test.hpp  02_shell.hpp  02_shell_test.hpp  03_bubble.hpp  04_shaker.hpp  CMakeLists.txt  README.md  cmp.hpp  main.cpp  memcheck.cpp  memcheck.sh  sort.hpp  test.cpp  test.hpp
01_sort/01_insert/: CMakeLists.txt  main.cpp  makefile  sort.cpp  sort.hpp  test.cpp
ci-setup/: CMakeLists.txt  main.cpp  memcheck.sh
